obsidian.css
:root {
    --base03:    #002b36;
    --base02:    #073642;
    --base01:    #586e75;
    --base00:    #657b83;
    --base0:     #839496;
    --base1:     #93a1a1;
    --base2:     #eee8d5;
    --base3:     #fdf6e3;
    --yellow:    #b58900;
    --orange:    #cb4b16;
    --red:       #dc322f;
    --magenta:   #d33682;
    --violet:    #6c71c4;
    --blue:      #268bd2;
    --cyan:      #2aa198;
    --green:     #859900;
}

.theme-dark {
    --background-primary: var(--base03);
    --background-primary-alt: var(--base02);
    --background-secondary: var(--base03);
    --background-secondary-alt: var(--base02);
    --text-normal: var(--base00);
    --text-faint: var(--base01);
    --text-muted: var(--base0);
    --text-error: var(--red);
    --text-accent: var(--violet);
    --text-title: var(--cyan);
    --text-code: var(--magenta);
    --text-highlight-fg: var(--blue);
    --text-highlight-bg: var(--base02);
    --background-modifier-border: var(--base01);
    --background-modifier-form-field: var(--base02);
    --interactive-normal: var(--red);
    --interactive-accent: var(--orange);
    --interactive-accent-hover: var(--cyan);
    --interactive-accent-rgb: var(--green);
    --vim-cursor: var(--green);
    --text-border: var(--yellow);

}

.theme-light {
    --background-primary: var(--base3);
    --background-primary-alt: var(--base2);
    --background-secondary: var(--base3);
    --background-secondary-alt: var(--base2);
    --text-normal: var(--base00);
    --text-faint: var(--base1);
    --text-muted: var(--base0);
    --text-error: var(--red);
    --text-accent: var(--violet);
    --text-title: var(--cyan);
    --text-code: var(--magenta);
    --text-highlight-fg: var(--blue);
    --text-highlight-bg: var(--base2);
    --pre-code: var(--base0);
    --background-modifier-border: var(--base1);
    --background-modifier-form-field: var(--base2);
    --interactive-normal: var(--base3);
    --interactive-accent: var(--orange);
    --interactive-accent-hover: var(--cyan);
    --interactive-accent-rgb: var(--green);
    --text-on-accent: var(--base3);
    --vim-cursor: var(--green);
    --text-border: var(--yellow);

}

.cm-header {
    color: var(--text-title);
}

h1, h2, h3, h4, h5, h6, .markdown-preview-view h6{
    color: var(--text-title);
}

.cm-formatting-image.cm-link {
    color: var(--text-faint) !important;
}

.CodeMirror span.cm-inline-code,
.CodeMirror span.cm-math,
pre > code:not(.prism) {
    color: var(--text-code);
}

.CodeMirror span.cm-formatting-math {
    color: var(--text-highlight-fg);
}

pre.HyperMD-codeblock {
    color: var(--text-normal) !important;
}

.cm-highlight, mark {
    background: var(--text-highlight-bg) !important;
    color: var(--text-highlight-fg) !important;
}

blockquote, .markdown-embed {
    border-color: var(--text-border) !important;
}

.search-result-file-matched-text {
    color: var(--text-highlight-fg);
}

.suggestion-item.is-selected {
    background-color: var(--background-secondary-alt);
}

/* Tags */
.cm-s-obsidian span.cm-hashtag-begin,
.cm-s-obsidian span.cm-hashtag-end,
a.tag {
    background-color: var(--text-normal);
    color: var(--background-primary);
    padding: 5px;
    text-decoration: none;
}

a.tag {
    border-radius: 10px;
}

.cm-s-obsidian span.cm-hashtag-begin {
    border-radius: 10px 0px 0px 10px;
    font-family: inherit;
    padding-right: 0px;
}

.cm-s-obsidian span.cm-hashtag-end {
    border-radius: 0px 10px 10px 0px;
    padding-left: 0px;
}

